[package]
name = "rduperemove"
version = "0.0.1"

authors = ["Renato Zannon <renato@rrsz.com>"]

[dependencies.btrfs]
path = "lib/btrfs"

[dependencies.fiemap]
path = "lib/fiemap"

[dependencies.ioctl]
path = "lib/ioctl"

[dependencies.docopt]
git = "git://github.com/docopt/docopt.rs"

[dependencies.docopt_macros]
git = "git://github.com/docopt/docopt.rs"

[dependencies.rust-crypto]
git = "git://github.com/DaGenix/rust-crypto"

[[bin]]
name = "rduperemove"
path = "src/main.rs"
